--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:theme="@style/Theme.Football_Field_Booking">
         <activity
             android:name=".PromotionActivity"
-            android:name=".ProfileEditByAdminActivity"
             android:exported="true" />
         <activity
             android:name=".ProfileEditActivity"
@@ -28,7 +27,10 @@
             android:exported="true" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="true" />
+
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:exported="true" />
@@ -36,13 +38,18 @@
             android:name=".CreateFootballFieldActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".OwnerFootballFieldDetailActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
