--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Football_Field_Booking">
         <activity
             android:name=".PromotionActivity"
+            android:exported="true"
+            />
+        <activity
             android:name=".ProfileEditByAdminActivity"
             android:exported="true" />
         <activity
